[gd_scene load_steps=23 format=3 uid="uid://dpgo63p6wlvo3"]

[ext_resource type="Script" path="res://siselect.gd" id="1_8hwwm"]
[ext_resource type="Texture2D" uid="uid://ceipw5yf74vm1" path="res://main menu compressed/image00008p.png" id="1_ftnse"]
[ext_resource type="Texture2D" uid="uid://bob7ylkxfvr2c" path="res://main menu compressed/image00010p.png" id="1_rm5oi"]
[ext_resource type="Texture2D" uid="uid://rbrrl0qg1iwo" path="res://main menu compressed/image00007p.png" id="2_jt7t8"]
[ext_resource type="Texture2D" uid="uid://bncjefiv47un2" path="res://main menu compressed/image00002p.png" id="3_l5ap3"]
[ext_resource type="Texture2D" uid="uid://bhc3y1gqrj2id" path="res://main menu compressed/image00001p.png" id="4_4xoq7"]
[ext_resource type="Texture2D" uid="uid://d1qm0pxamnh2s" path="res://main menu compressed/image00006p.png" id="5_s1im7"]
[ext_resource type="Texture2D" uid="uid://bb03hn31jac0a" path="res://main menu compressed/image00009p.png" id="6_y8p6q"]
[ext_resource type="Texture2D" uid="uid://c5jyv3ab4r8cg" path="res://main menu compressed/image00004p.png" id="7_8pelr"]
[ext_resource type="Texture2D" uid="uid://be016xvyxc1rx" path="res://main menu compressed/image00011p.png" id="8_h82qd"]
[ext_resource type="Texture2D" uid="uid://bsa3mxuybcs7d" path="res://main menu compressed/842ad68b315b0f586c30b465221da609.jpg" id="10_1kk4k"]
[ext_resource type="Texture2D" uid="uid://c3uxbqp1tujiy" path="res://main menu compressed/image00003p.png" id="10_v08o1"]
[ext_resource type="Texture2D" uid="uid://ctm641mvm7sxf" path="res://main menu compressed/image00005p.png" id="11_dueee"]
[ext_resource type="Script" path="res://rdycshl.gd" id="13_fcg65"]
[ext_resource type="Script" path="res://csbuttons.gd" id="14_e1lb0"]
[ext_resource type="AudioStream" uid="uid://cswleun1oe0b5" path="res://audio/sfx/mixkit-modern-technology-select-3124_Audio Trimmer.wav" id="15_4oel2"]
[ext_resource type="AudioStream" uid="uid://bvrogmtr5vxae" path="res://audio/sfx/interface-1-126517.mp3" id="16_nxfob"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3i2uk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rm5oi")
}, {
"duration": 1.0,
"texture": ExtResource("2_jt7t8")
}],
"loop": true,
"name": &"blueskullyp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_l5ap3")
}, {
"duration": 1.0,
"texture": ExtResource("4_4xoq7")
}],
"loop": true,
"name": &"greenskullyp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_s1im7")
}, {
"duration": 1.0,
"texture": ExtResource("6_y8p6q")
}],
"loop": true,
"name": &"orangeskullyp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8pelr")
}, {
"duration": 1.0,
"texture": ExtResource("8_h82qd")
}],
"loop": true,
"name": &"redskullyp",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_urw58"]
resource_name = "ready"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rdycshl:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.1),
"transitions": PackedFloat32Array(1, 0.183011, 0.183011),
"update": 0,
"values": [Vector2(0.594, 0.594), Vector2(0.62, 0.62), Vector2(0.594, 0.594)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rk4sh"]
_data = {
"ready": SubResource("Animation_urw58")
}

[sub_resource type="Animation" id="Animation_wgi8r"]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 0.183011),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_armpq"]
_data = {
"flash": SubResource("Animation_wgi8r")
}

[node name="siselect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8hwwm")

[node name="white" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(271, 464)
scale = Vector2(0.45, 0.45)
texture = ExtResource("10_1kk4k")

[node name="characterp" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
top_level = true
position = Vector2(269, 421)
scale = Vector2(0.594, 0.594)
sprite_frames = SubResource("SpriteFrames_3i2uk")
animation = &"orangeskullyp"

[node name="characterselect" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.594, 0.594)
texture = ExtResource("1_ftnse")

[node name="csup" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 178.0
offset_top = 45.0
offset_right = 358.0
offset_bottom = 147.0

[node name="csdown" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 178.0
offset_top = 668.0
offset_right = 358.0
offset_bottom = 770.0

[node name="rdycs" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.594, 0.594)
texture = ExtResource("10_v08o1")

[node name="rdycshl" type="Sprite2D" parent="."]
position = Vector2(1523, 540)
scale = Vector2(0.594, 0.594)
texture = ExtResource("11_dueee")
script = ExtResource("13_fcg65")

[node name="ready" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rk4sh")
}

[node name="flash" type="AnimationPlayer" parent="."]
root_node = NodePath("../white")
libraries = {
"": SubResource("AnimationLibrary_armpq")
}

[node name="rdybutton" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 765.0
offset_top = 287.0
offset_right = 1927.0
offset_bottom = 723.0

[node name="siback" type="Button" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 41.0
offset_top = 986.0
offset_right = 308.0
offset_bottom = 1085.0

[node name="csbuttons" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_e1lb0")

[node name="buttonhl" type="AudioStreamPlayer" parent="csbuttons"]
stream = ExtResource("15_4oel2")
volume_db = -5.621
bus = &"sfx"

[node name="buttonpress" type="AudioStreamPlayer" parent="csbuttons"]
stream = ExtResource("16_nxfob")
volume_db = -8.432
bus = &"sfx"

[connection signal="pressed" from="csup" to="." method="_on_csup_pressed"]
[connection signal="pressed" from="csup" to="csbuttons" method="_on_csup_pressed"]
[connection signal="pressed" from="csdown" to="." method="_on_csdown_pressed"]
[connection signal="pressed" from="csdown" to="csbuttons" method="_on_csdown_pressed"]
[connection signal="mouse_entered" from="rdybutton" to="rdycshl" method="_on_rdybutton_mouse_entered"]
[connection signal="mouse_entered" from="rdybutton" to="csbuttons" method="_on_rdybutton_mouse_entered"]
[connection signal="mouse_exited" from="rdybutton" to="rdycshl" method="_on_rdybutton_mouse_exited"]
[connection signal="pressed" from="rdybutton" to="." method="_on_rdybutton_pressed"]
[connection signal="pressed" from="rdybutton" to="csbuttons" method="_on_rdybutton_pressed"]
[connection signal="pressed" from="siback" to="." method="_on_siback_pressed"]
[connection signal="pressed" from="siback" to="csbuttons" method="_on_siback_pressed"]
